# apertium-rus-ukr

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  apertium-pl-uk.pl-uk.dix  apertium-ru-uk.ru-uk.dix  apertium-ru-uk.ru-uk.lrx  apertium-ru-uk.ru-uk.rlx  apertium-ru-uk.ru-uk.t1x  apertium-ru-uk.ru-uk.t2x  apertium-ru-uk.ru.dix  apertium-ru-uk.ru.xml  apertium-ru-uk.uk-ru.rlx  apertium-ru-uk.uk-ru.t1x  apertium-ru-uk.uk.dix  apertium-rus-ukr.post-rus.dix  apertium-rus-ukr.rus-ukr.dix  apertium-rus-ukr.rus-ukr.lrx  apertium-rus-ukr.rus-ukr.t1x  apertium-rus-ukr.rus.dix  apertium-rus-ukr.ukr-rus.lrx  apertium-rus-ukr.ukr-rus.rlx  apertium-rus-ukr.ukr-rus.t1x  apertium-rus-ukr.ukr-rus.t2x  apertium-rus-ukr.ukr.dix  configure.ac  en-ca.prob  filter.xsl  modes.xml
corpora/scripts/: README  cov-kaz.sh  coverage.sh  hitparade.sh  hitparade_pair.sh  makeparade.sh  morphfreq.sh  new-parade.sh  process-wikipedia.sh  trimmed-coverage.sh  wpdump2txt.sh  xml2txt.py
dev/: interwiki.ru-uk  ru-uk-adj  ru-uk-adv  ru-uk-nouns  ru-uk-pl-lv-en.csv  ru-uk-verb  ru-verbs1.xml  strip-accents.pl  uk-ispell-entries  uk-num.csv  uk-ru-indeclinable  uk-sint-auto
dev/gci-tasks/: missing-adjs.rus.00  missing-adjs.rus.01  missing-adjs.rus.02  missing-adjs.rus.03  missing-adjs.rus.04  missing-adjs.rus.05  missing-adjs.rus.06  missing-adjs.rus.07  missing-adjs.rus.08  missing-nouns.rus.00  missing-nouns.rus.01  missing-nouns.rus.02  missing-nouns.rus.03  missing-nouns.rus.04  missing-nouns.rus.05  missing-nouns.rus.06  missing-verbs.rus.00  missing-verbs.rus.01  missing-verbs.rus.02  missing-verbs.rus.03  missing-verbs.rus.04  missing-verbs.rus.05  missing-verbs.rus.06  missing-verbs.rus.07
dev/testvoc/: generation.sh  inconsistency-summary.sh  inconsistency.sh  testvoc-summary.rus-ukr.txt  testvoc-summary.ukr-rus.txt  testvoc.sh
test/: tests.json  ukr-rus-pending-biltrans-expected.txt  ukr-rus-pending-disam-expected.txt  ukr-rus-pending-generator-expected.txt  ukr-rus-pending-input.txt  ukr-rus-pending-interchunk-expected.txt  ukr-rus-pending-lex-expected.txt  ukr-rus-pending-morph-expected.txt  ukr-rus-pending-postchunk-expected.txt  ukr-rus-pending-postgen-expected.txt  ukr-rus-pending-postgen-gold.txt  ukr-rus-pending-pretransfer-expected.txt
texts/: WER.txt  article2.rus.reference.txt  article2.rus.test.txt  article2.ukr.txt  article3.rus.reference-google.txt  article3.rus.reference-pere.org.ua.txt  article3.rus.reference-pragma.txt  article3.rus.reference-yandex.txt  article3.rus.reference.txt  article3.rus.test-google.txt  article3.rus.test-pere.org.ua.txt  article3.rus.test-pragma.txt  article3.rus.test-yandex.txt  article3.rus.test.txt  article3.ukr.txt  rasskaz.ukr-rus.txt  rasskaz.ukr.txt
